[package]
name = "substreams-datasets"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.38"
common = { path = "../common" }
firehose-datasets = { path = "../firehose-datasets" }
futures.workspace = true
log.workspace = true
prost-reflect = "0.13.1"
prost.workspace = true
reqwest = "0.12"
serde.workspace = true
sqlparser = "0.46.0"
tokio.workspace = true
toml.workspace = true
tonic.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true

[dev-dependencies]
fs-err.workspace = true
object_store.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
