[package]
name = "substreams-datasets"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.80"
chrono.workspace = true
common = { path = "../common" }
firehose-datasets = { path = "../firehose-datasets" }
futures.workspace = true
tracing.workspace = true
prost-reflect = "0.15.0"
prost.workspace = true
reqwest = "0.12"
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
datafusion.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true

[dev-dependencies]
fs-err.workspace = true
object_store.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
