[package]
name = "tests"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[lib]
name = "tests"

[[bin]]
name = "tests"

[dependencies]
admin-api = { path = "../crates/services/admin-api" }
alloy.workspace = true
arrow-flight.workspace = true
backon.workspace = true
clap.workspace = true
color-backtrace = { version = "0.7.1", default-features = false, features = ["use-btparse-crate"] }
common = { path = "../crates/core/common" }
controller = { path = "../crates/services/controller" }
ctor = "0.5.0"
dataset-store = { path = "../crates/core/dataset-store" }
datasets-common = { path = "../crates/core/datasets-common" }
datasets-derived = { path = "../crates/core/datasets-derived" }
dotenvy.workspace = true
dump = { path = "../crates/core/dump" }
evm-rpc-datasets = { path = "../crates/extractors/evm-rpc" }
firehose-datasets = { path = "../crates/extractors/firehose" }
fs-err.workspace = true
futures.workspace = true
indoc.workspace = true
metadata-db = { path = "../crates/core/metadata-db" }
monitoring = { path = "../crates/core/monitoring" }
ampd = { path = "../crates/bin/ampd" }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
amp-client = { path = "../crates/client/amp-client" }
object_store.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
substreams-datasets = { path = "../crates/extractors/substreams" }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
worker = { path = "../crates/services/worker" }
