[package]
name = "tests"
edition.workspace = true
version.workspace = true
license-file.workspace = true
build = "build.rs"

[lib]
name = "tests"

[[bin]]
name = "tests"

[dependencies]
alloy.workspace = true
amp-client = { path = "../crates/clients/flight" }
amp-data-store = { path = "../crates/core/data-store" }
amp-object-store = { path = "../crates/core/object-store" }
ampctl = { path = "../crates/bin/ampctl" }
anyhow.workspace = true
arrow-flight.workspace = true
backon.workspace = true
clap.workspace = true
color-backtrace = { version = "0.7.1", default-features = false, features = [
    "use-btparse-crate",
] }
common = { path = "../crates/core/common" }
amp-config = { path = "../crates/config" }
controller = { path = "../crates/services/controller" }
ctor = "0.5.0"
amp-dataset-store = { path = "../crates/core/dataset-store" }
amp-datasets-registry = { path = "../crates/core/datasets-registry" }
amp-providers-registry = { path = "../crates/core/providers-registry" }
datasets-common = { path = "../crates/core/datasets-common" }
datasets-derived = { path = "../crates/core/datasets-derived" }
dotenvy.workspace = true
dump = { path = "../crates/core/dump" }
evm-rpc-datasets = { path = "../crates/extractors/evm-rpc" }
firehose-datasets = { path = "../crates/extractors/firehose" }
fs-err.workspace = true
futures.workspace = true
indoc.workspace = true
metadata-db = { path = "../crates/core/metadata-db" }
metadata-db-postgres = { path = "../crates/services/metadata-db-postgres" }
monitoring = { path = "../crates/core/monitoring" }
object_store.workspace = true
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
pretty_assertions.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
server = { path = "../crates/services/server" }
solana-datasets = { path = "../crates/extractors/solana" }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true
verification = { path = "../crates/core/verification" }
worker = { path = "../crates/services/worker" }


[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = ["build"] }
