[package]
name = "ve"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
sqlx.workspace = true


