[package]
name = "arrow-to-postgres"
description = "Provides a binary encoder for converting Apache Arrow RecordBatch and stream them into Postgres using the Postgres binary format"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
arrow-array = { version = "57", default-features = false }
arrow-schema = { version = "57" }
bytes.workspace = true
enum_dispatch = "0.3.13"
serde_json = "1.0"
thiserror.workspace = true
