[package]
name = "nozzle-client"
edition.workspace = true
version.workspace = true

[dependencies]
arrow-flight.workspace = true
async-stream.workspace = true
bytes.workspace = true
common = { path = "../core/common" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
