[package]
name = "amp-client"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = []
lmdb = ["dep:heed"]
postgres = ["sqlx", "uuid"]

[dependencies]
alloy.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
common = { path = "../core/common" }
futures.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "chrono",
    "json",
], optional = true }
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid = { workspace = true, optional = true }

# Optional dependencies for LMDB backend
heed = { version = "0.20", optional = true }

[dev-dependencies]
pgtemp = "0.6.0"
tempfile.workspace = true
uuid = { workspace = true, features = ["v4"] }
