[package]
name = "amp-config"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[features]
# JSON Schema generation support for configuration validation
schemars = ["dep:schemars"]

[dependencies]
amp-common = { package = "common", path = "../core/common" }
amp-monitoring = { package = "monitoring", path = "../core/monitoring" }
amp-object-store = { path = "../core/object-store" }
amp-worker-core = { path = "../core/worker-core" }
figment.workspace = true
fs-err.workspace = true
metadata-db = { path = "../core/metadata-db" }
schemars = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
