[package]
name = "eth-beacon-datasets"
edition.workspace = true
version.workspace = true

[dependencies]
common = { path = "../../common" }
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
serde_with = "3.9.0"
tracing.workspace = true
serde_json.workspace = true
schemars.workspace = true
reqwest = "0.12.23"
futures.workspace = true
async-stream.workspace = true
alloy.workspace = true

[dev-dependencies]
fs-err.workspace = true
