[package]
name = "substreams-datasets"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
chrono.workspace = true
common = { path = "../../common" }
firehose-datasets = { path = "../firehose-datasets" }
schemars.workspace = true
futures.workspace = true
tracing.workspace = true
prost-reflect = "0.15.0"
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
datafusion.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true

[dev-dependencies]
fs-err.workspace = true
object_store.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
