[package]
name = "auth-http"
description = "Provides an auth module to extract auth from the Authorization bearer token on an axum request; validate it against privy, extract the Claims and fetch the user from the IDaaS."
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra = { version = "0.10.3", features = ["typed-header"] }
chrono.workspace = true
headers = { version = "0.4.1" }
jsonwebtoken = { version = "10.0.0", default-features = false, features = ["aws_lc_rs"] }
lru = { version = "0.16.2" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
http = "1.3.1"
privy-rs = "0.1.0-alpha.3"
