[package]
name = "amp-client"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
alloy.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
common = { path = "../../core/common" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
