[package]
name = "amp-client"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = []
lmdb = ["dep:heed", "dep:bincode"]

[dependencies]
alloy.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
common = { path = "../../core/common" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true

# Optional dependencies for LMDB backend
heed = { version = "0.20", optional = true }
bincode = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
