[package]
name = "amp-debezium-client"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
amp-client = { path = "../amp-client" }
async-stream.workspace = true
async-trait.workspace = true
common = { path = "../../core/common" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
