[package]
name = "amp-debezium-client"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = []
lmdb = ["dep:heed", "dep:bincode"]

[dependencies]
amp-client = { path = "../amp-client" }
async-stream.workspace = true
async-trait.workspace = true
common = { path = "../../core/common" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Optional dependencies for LMDB backend
heed = { version = "0.20", optional = true }
bincode = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
