[package]
name = "admin-client"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
datasets-common = { path = "../../core/datasets-common" }
dump = { path = "../../core/dump" }
monitoring = { path = "../../core/monitoring" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding = "2.1"
worker = { path = "../../services/worker" }
